--- a/src/main/webapp/templates/company.html
+++ b/src/main/webapp/templates/company.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,17 +15,104 @@
                 <h2>Use the desired method to interact with the table Company.</h2>
             </div>
             <div class="card-body">
-                <div class="accordion" id="accordionExample">
+                <div class="accordion" id="methods-for-company">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                Create
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#methods-for-company">
+                            <div class="accordion-body">
+                                <form  action="/company" method="post">
+                                    <div class="mb-3 row">
+                                        <label for="setName" class="col-sm-2 col-form-label">Name</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="setName" id="setName">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="setDescription" class="col-sm-2 col-form-label">Description</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="setDescription" id="setDescription">
+                                        </div>
+                                    </div>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit">Create</button>
+                                    </div>
+                                </form>
+                                <br>
+                                <div class="container text-center">
+                                    <div class="col-md-6 offset-md-3">
+                                        <h4 style="color:#00ff00" th:if="${companyId.length()} != 0" th:text="'ID=' + ${companyId}"></h4>
+                                        <h4 style="color:#ff0000" th:if="${errorCreate.length()} != 0" th:text="'Error: ' + ${errorCreate}"></h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                GetById
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#methods-for-company">
+                            <div class="accordion-body">
+                                <form  action="/company" method="post">
+                                    <div class="mb-3 row">
+                                        <label for="setId" class="col-sm-2 col-form-label">ID</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="setId" id="setId">
+                                        </div>
+                                    </div>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit">Get</button>
+                                    </div>
+                                </form>
+                                <br>
+                                <div th:if="${company} != ''">
+                                    <table class="table">
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                        </tr>
+                                        <tr>
+                                            <td th:text="${company.id}"></td>
+                                            <td th:text="${company.name}"></td>
+                                            <td th:text="${company.description}"></td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="container text-center">
+                                    <div class="row">
+                                        <div class="col-md-6 offset-md-3">
+                                            <h4 style="color:#ff0000" th:if="${errorGetById} != ''" th:text="'Error: ' + ${errorGetById}"></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Get all
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
-                                <a href="/company/get-all" class="btn btn-outline-primary">getAll</a>
-                                <div th:if="${companies} != 'null'">
+                                <form  action="/company" method="post">
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit">getAll</button>
+                                    </div>
+                                </form>
+                                <div th:if="${companies} != ''">
                                     <table class="table">
                                         <tr>
                                             <th>ID</th>
@@ -42,11 +129,87 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                Update
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#methods-for-company">
+                            <div class="accordion-body">
+                                <form  action="/company" method="post">
+                                    <div class="mb-3 row">
+                                        <label for="setName" class="col-sm-2 col-form-label">ID</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="updateId" id="updateId">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="setName" class="col-sm-2 col-form-label">Name</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="updateName" id="updateName">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="setName" class="col-sm-2 col-form-label">Description</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="updateDescription" id="updateDescription">
+                                        </div>
+                                    </div>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit">Update</button>
+                                    </div>
+                                </form>
+                                <br>
+                                <div class="container text-center">
+                                    <div class="row">
+                                        <div class="col-md-6 offset-md-3">
+                                            <h4 style="color:#00ff00" th:if="${errorUpdate} == 'true'" th:text="${errorUpdate}"></h4>
+                                            <h4 style="color:#ff0000" th:if="${errorUpdate.length()} > 4" th:text="'Error: ' + ${errorUpdate}"></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFive">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                DeleteById
+                            </button>
+                        </h2>
+                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-company">
+                            <div class="accordion-body">
+                                <form  action="/company" method="post">
+                                    <div class="mb-3 row">
+                                        <label for="setName" class="col-sm-2 col-form-label">ID</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="deleteId" id="deleteId">
+                                        </div>
+                                    </div>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit">Delete</button>
+                                    </div>
+                                </form>
+                                <br>
+                                <div class="container text-center">
+                                    <div class="row">
+                                        <div class="col-md-6 offset-md-3">
+                                            <h4 style="color:#00ff00" th:if="${errorDeleteById} == 'true'" th:text="${errorDeleteById}"></h4>
+                                            <h4 style="color:#ff0000" th:if="${errorDeleteById.length()} > 4" th:text="'Error: ' + ${errorDeleteById}"></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card-text">
-                <a href="/" class="btn btn-secondary" role="button" data-bs-toggle="button">Back</a>
-            </div>
+            <a th:href="'/'" class="btn btn-sm btn-secondary">Back</a>
         </div>
     </div>
 </body>
