--- a/src/main/webapp/templates/customer.html
+++ b/src/main/webapp/templates/customer.html
@@ -12,29 +12,35 @@
     <div class="container mt-3">
         <div class="card">
             <div class="card-title">
-                <h2>Use the desired method to interact with the table Company.</h2>
+                <h2>Use the desired method to interact with the table Customer.</h2>
             </div>
             <div class="card-body">
-                <div class="accordion" id="methods-for-company">
+                <div class="accordion" id="methods-for-customer">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Create
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#methods-for-company">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#methods-for-customer">
                             <div class="accordion-body">
-                                <form  action="/company" method="post">
+                                <form  action="/customer" method="post">
                                     <div class="mb-3 row">
-                                        <label for="setName" class="col-sm-2 col-form-label">Name</label>
+                                        <label for="setFirstName" class="col-sm-2 col-form-label">FirstName</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" value="" name="setName" id="setName">
+                                            <input type="text" class="form-control" value="" name="setFirstName" id="setFirstName">
                                         </div>
                                     </div>
                                     <div class="mb-3 row">
-                                        <label for="setDescription" class="col-sm-2 col-form-label">Description</label>
+                                        <label for="setSecondName" class="col-sm-2 col-form-label">SecondName</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" value="" name="setDescription" id="setDescription">
+                                            <input type="text" class="form-control" value="" name="setSecondName" id="setSecondName">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="setAge" class="col-sm-2 col-form-label">Age</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="setAge" id="setAge">
                                         </div>
                                     </div>
                                     <div class="d-grid gap-2">
@@ -44,7 +50,7 @@
                                 <br>
                                 <div class="container text-center">
                                     <div class="col-md-6 offset-md-3">
-                                        <h4 style="color:#00ff00" th:if="${companyId.length()} != 0" th:text="'ID=' + ${companyId}"></h4>
+                                        <h4 style="color:#00ff00" th:if="${customerId.length()} != 0" th:text="'ID=' + ${customerId}"></h4>
                                         <h4 style="color:#ff0000" th:if="${errorCreate.length()} != 0" th:text="'Error: ' + ${errorCreate}"></h4>
                                     </div>
                                 </div>
@@ -59,9 +65,9 @@
                                 GetById
                             </button>
                         </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#methods-for-company">
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#methods-for-customer">
                             <div class="accordion-body">
-                                <form  action="/company" method="post">
+                                <form  action="/customer" method="post">
                                     <div class="mb-3 row">
                                         <label for="setId" class="col-sm-2 col-form-label">ID</label>
                                         <div class="col-sm-10">
@@ -73,17 +79,19 @@
                                     </div>
                                 </form>
                                 <br>
-                                <div th:if="${company} != ''">
+                                <div th:if="${customer} != ''">
                                     <table class="table">
                                         <tr>
                                             <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Description</th>
+                                            <th>FirstName</th>
+                                            <th>SecondName</th>
+                                            <th>Age</th>
                                         </tr>
                                         <tr>
-                                            <td th:text="${company.id}"></td>
-                                            <td th:text="${company.name}"></td>
-                                            <td th:text="${company.description}"></td>
+                                            <td th:text="${customer.id}"></td>
+                                            <td th:text="${customer.firstName}"></td>
+                                            <td th:text="${customer.secondName}"></td>
+                                            <td th:text="${customer.age}"></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -105,24 +113,26 @@
                                 Get all
                             </button>
                         </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#methods-for-company">
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#methods-for-customer">
                             <div class="accordion-body">
-                                <form  action="/company" method="post">
+                                <form  action="/customer" method="post">
                                     <div class="d-grid gap-2">
                                         <button class="btn btn-primary" type="submit">getAll</button>
                                     </div>
                                 </form>
-                                <div th:if="${companies} != ''">
+                                <div th:if="${customers} != ''">
                                     <table class="table">
                                         <tr>
                                             <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Description</th>
+                                            <th>FirstName</th>
+                                            <th>SecondName</th>
+                                            <th>Age</th>
                                         </tr>
-                                        <tr th:each="company: ${companies}">
-                                            <td th:text="${company.id}"></td>
-                                            <td th:text="${company.name}"></td>
-                                            <td th:text="${company.description}"></td>
+                                        <tr th:each="customer: ${customers}">
+                                            <td th:text="${customer.id}"></td>
+                                            <td th:text="${customer.firstName}"></td>
+                                            <td th:text="${customer.secondName}"></td>
+                                            <td th:text="${customer.age}"></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -137,9 +147,9 @@
                                 Update
                             </button>
                         </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#methods-for-company">
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#methods-for-customer">
                             <div class="accordion-body">
-                                <form  action="/company" method="post">
+                                <form  action="/customer" method="post">
                                     <div class="mb-3 row">
                                         <label for="updateId" class="col-sm-2 col-form-label">ID</label>
                                         <div class="col-sm-10">
@@ -147,15 +157,21 @@
                                         </div>
                                     </div>
                                     <div class="mb-3 row">
-                                        <label for="updateName" class="col-sm-2 col-form-label">Name</label>
+                                        <label for="updateFirstName" class="col-sm-2 col-form-label">FirstName</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" value="" name="updateName" id="updateName">
+                                            <input type="text" class="form-control" value="" name="updateFirstName" id="updateFirstName">
                                         </div>
                                     </div>
                                     <div class="mb-3 row">
-                                        <label for="updateDescription" class="col-sm-2 col-form-label">Description</label>
+                                        <label for="updateSecondName" class="col-sm-2 col-form-label">SecondName</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" value="" name="updateDescription" id="updateDescription">
+                                            <input type="text" class="form-control" value="" name="updateSecondName" id="updateSecondName">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="updateAge" class="col-sm-2 col-form-label">Age</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" value="" name="updateAge" id="updateAge">
                                         </div>
                                     </div>
                                     <div class="d-grid gap-2">
@@ -182,9 +198,9 @@
                                 DeleteById
                             </button>
                         </h2>
-                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-company">
+                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-customer">
                             <div class="accordion-body">
-                                <form  action="/company" method="post">
+                                <form  action="/customer" method="post">
                                     <div class="mb-3 row">
                                         <label for="deleteId" class="col-sm-2 col-form-label">ID</label>
                                         <div class="col-sm-10">
