--- a/src/main/webapp/templates/company.html
+++ b/src/main/webapp/templates/company.html
@@ -22,7 +22,9 @@
                                 Create
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#methods-for-company">
+                        <div id="collapseOne"
+                             th:class="'accordion-collapse collapse' + ${(companyId + errorCreate) == '' ? '' : ' show'}"
+                             aria-labelledby="headingOne" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
                                 <form  action="/company" method="post">
                                     <div class="mb-3 row">
@@ -59,7 +61,9 @@
                                 GetById
                             </button>
                         </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#methods-for-company">
+                        <div id="collapseTwo"
+                             th:class="'accordion-collapse collapse' + ${(company + errorGetById) == '' ? '' : ' show'}"
+                             aria-labelledby="headingTwo" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
                                 <form  action="/company" method="post">
                                     <div class="mb-3 row">
@@ -105,7 +109,9 @@
                                 Get all
                             </button>
                         </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#methods-for-company">
+                        <div id="collapseThree"
+                             th:class="'accordion-collapse collapse' + ${companies == '' ? '' : ' show'}"
+                             aria-labelledby="headingThree" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
                                 <form  action="/company" method="post">
                                     <div class="d-grid gap-2">
@@ -137,7 +143,9 @@
                                 Update
                             </button>
                         </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#methods-for-company">
+                        <div id="collapseFour"
+                             th:class="'accordion-collapse collapse' + ${(errorUpdate + errorUpdate) == '' ? '' : ' show'}"
+                             aria-labelledby="headingFour" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
                                 <form  action="/company" method="post">
                                     <div class="mb-3 row">
@@ -182,7 +190,9 @@
                                 DeleteById
                             </button>
                         </h2>
-                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-company">
+                        <div id="collapseFive"
+                             th:class="'accordion-collapse collapse' + ${errorDeleteById == '' ? '' : ' show'}"
+                             aria-labelledby="headingFive" data-bs-parent="#methods-for-company">
                             <div class="accordion-body">
                                 <form  action="/company" method="post">
                                     <div class="mb-3 row">
