--- a/src/main/webapp/templates/skill.html
+++ b/src/main/webapp/templates/skill.html
@@ -22,7 +22,9 @@
                                 Create
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#methods-for-skill">
+                        <div id="collapseOne"
+                             th:class="'accordion-collapse collapse' + ${(skillId + errorCreate) == '' ? '' : ' show'}"
+                             aria-labelledby="headingOne" data-bs-parent="#methods-for-skill">
                             <div class="accordion-body">
                                 <form  action="/skill" method="post">
                                     <div class="mb-3 row">
@@ -59,7 +61,9 @@
                                 GetById
                             </button>
                         </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#methods-for-skill">
+                        <div id="collapseTwo"
+                             th:class="'accordion-collapse collapse' + ${(skill + errorGetById) == '' ? '' : ' show'}"
+                             aria-labelledby="headingTwo" data-bs-parent="#methods-for-skill">
                             <div class="accordion-body">
                                 <form  action="/skill" method="post">
                                     <div class="mb-3 row">
@@ -105,7 +109,9 @@
                                 Get all
                             </button>
                         </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#methods-for-skill">
+                        <div id="collapseThree"
+                             th:class="'accordion-collapse collapse' + ${skills == '' ? '' : ' show'}"
+                             aria-labelledby="headingThree" data-bs-parent="#methods-for-skill">
                             <div class="accordion-body">
                                 <form  action="/skill" method="post">
                                     <div class="d-grid gap-2">
@@ -119,7 +125,7 @@
                                             <th>Department</th>
                                             <th>SkillLevel</th>
                                         </tr>
-                                        <tr th:each="skill: ${skills}">
+                                        <tr th:each="skill : ${skills}">
                                             <td th:text="${skill.id}"></td>
                                             <td th:text="${skill.department}"></td>
                                             <td th:text="${skill.skillLevel}"></td>
@@ -137,7 +143,9 @@
                                 Update
                             </button>
                         </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#methods-for-skill">
+                        <div id="collapseFour"
+                             th:class="'accordion-collapse collapse' + ${errorUpdate == '' ? '' : ' show'}"
+                             aria-labelledby="headingFour" data-bs-parent="#methods-for-skill">
                             <div class="accordion-body">
                                 <form  action="/skill" method="post">
                                     <div class="mb-3 row">
@@ -182,7 +190,9 @@
                                 DeleteById
                             </button>
                         </h2>
-                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-skill">
+                        <div id="collapseFive"
+                             th:class="'accordion-collapse collapse' + ${errorDeleteById == '' ? '' : ' show'}"
+                             class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#methods-for-skill">
                             <div class="accordion-body">
                                 <form  action="/skill" method="post">
                                     <div class="mb-3 row">
